--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,3 +10,22 @@ body {
     background-color: var(--primary-white-color);
     color: var(--primary-text-color);
 }
+ul {
+    list-style: none;
+}
+.logo {
+    color: var(--accent-color);
+}
+.logo-studio {
+    color: #000000;
+}
+.hero {
+    background-color: #2F303A;
+}
+.hero-title {
+    color: var(--primary-white-color);
+}
+.title {
+    color: var(--title-text-color);
+}
+/*--team--*/
