--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,29 +3,124 @@
     --title-text-color: #212121;
     --accent-color: #2196F3;
     --primary-white-color: #FFFFFF;
-
-
+    --primary-black-color: #2F303A;
+    
 }
+
 body {
     background-color: var(--primary-white-color);
     color: var(--primary-text-color);
+
+    font-family: Roboto, sans-serif;
 }
 ul {
     list-style: none;
 }
+.title {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+}
+/* logo */
+
 .logo {
     color: var(--accent-color);
+    font-family: Raleway;
+    text-decoration: none;
 }
 .logo-studio {
     color: #000000;
+    font-family: Raleway;
+    text-decoration: none;
 }
+.link-logo {
+    text-decoration: none;
+}
+/* heder */
+.link {
+    color: var(--title-text-color);
+    text-decoration: none;
+}
+
+.link:hover {
+    color: var(--accent-color);
+}
+
+.link:focus {
+    color: var(--accent-color);
+}
+
+/* hero */
+
 .hero {
-    background-color: #2F303A;
+    background-color: var(--primary-black-color);
 }
+
 .hero-title {
     color: var(--primary-white-color);
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
 }
-.title {
+
+/* exellence */
+
+.execellence-title {
     color: var(--title-text-color);
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
 }
-/*--team--*/
+.execellence.text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7;
+}
+
+/* team */
+
+.team {
+    background-color: #F5F4FA;
+}
+.teamcard {
+    background-color: var(--primary-white-color);
+}
+.team-title {
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+}
+.team.text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.19;
+}
+
+
+/* footer */
+
+footer {
+    background-color: var(--primary-black-color);
+}
+footer .logo-studio {
+    color: var(--primary-white-color);
+}
+.address {
+    font-style: inherit;
+}
+.address-item {
+    color:#FFFFFF;
+}
+.item {
+    color: rgba(255, 255, 255, 0.6);
+}
+.address.link:hover {
+    color: #2196F3;
+}
+.address.link:focus{
+    color: #2196F3;
+}
