--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,6 +77,7 @@ ul {
 .primary-button {
     background-color: var(--accent-color);
     color: var(--primary-white-color);
+    font-family: Roboto, sans-serif;
 }
 
 /* exellence */
@@ -143,9 +144,52 @@ footer .logo-studio {
     line-height: 1.7;
 }
 
-.address.link:hover {
-    color: var(--accent-color);
-}
+.address.link:hover,
 .address.link:focus {
     color: var(--accent-color);
 }
+
+/* Портфоліо */
+
+.portfolio-title {
+    color: var(--title-text-color);
+}
+/* Фільтри */
+
+.filter-button {
+    background-color: #F5F4FA;
+    color: var(--title-text-color);
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+}
+.filter-button:hover,
+.filter-button:focus {
+    background-color: var(--accent-color);
+}
+.filter-button.current {
+    background-color: #2196F3;
+    color: #FFFFFF;
+}
+/* Project */
+
+.project-title {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+}
+.project.text {
+    color: var(--primary-text-color);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.9;
+}
+
+
+
+
+
+
+
