--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@ ul {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
 }
 /* logo */
 
@@ -31,7 +31,7 @@ ul {
     text-decoration: none;
     font-size: 26px;
     line-height: 1.2;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
 }
 .logo-studio {
     color: #000000;
@@ -39,7 +39,7 @@ ul {
     text-decoration: none;
     font-size: 26px;
     line-height: 1.2;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
 }
 .link-logo {
     text-decoration: none;
@@ -52,7 +52,7 @@ ul {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.17;
-    letter-spacing: 2%;
+    letter-spacing: 0.02em;
 }
 .link.email,
 .link.tel {
@@ -60,7 +60,7 @@ ul {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.17;
-    letter-spacing: 2%;
+    letter-spacing: 0.02em;
     text-decoration: none;
 }
 
@@ -87,7 +87,7 @@ ul {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    letter-spacing: 6%;
+    letter-spacing: 0.06em;
 }
 .primary-button {
     background-color: var(--accent-color);
@@ -96,7 +96,7 @@ ul {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.9;
-    letter-spacing: 6%;
+    letter-spacing: 0.06em;
 }
 
 /* exellence */
@@ -107,12 +107,12 @@ ul {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
 }
 .execellence.text {
     font-size: 14px;
     line-height: 1.7;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
 }
 
 /* team */
@@ -128,12 +128,12 @@ ul {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
 }
 .team.text {
     font-size: 16px;
     line-height: 1.19;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
 }
 
 
@@ -152,17 +152,19 @@ footer .logo-studio {
 .address-item {
     text-decoration: none;
     color:#FFFFFF;
+    font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
     
 }
 .item {
     text-decoration: none;
     color: rgba(255, 255, 255, 0.6);
+    font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
 }
 
 .address.link:hover,
@@ -184,7 +186,7 @@ footer .logo-studio {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
 }
 .filter-button:hover,
 .filter-button:focus {
@@ -201,13 +203,13 @@ footer .logo-studio {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
-    letter-spacing: 6%;
+    letter-spacing: 0.06em;
 }
 .project.text {
     color: var(--primary-text-color);
     font-size: 16px;
     line-height: 1.9;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
 }
 
 
